# EglBox-Android

./: build.gradle  gradle.properties  settings.gradle
eglbox/: build.gradle
eglbox-core/: build.gradle
eglbox-core/src/main/: AndroidManifest.xml
eglbox-filter/: build.gradle
eglbox-filter/src/main/assets/common/: fragment.glsl
eglbox-filter/src/main/assets/light_ball/: vertex.glsl
eglbox-model/: build.gradle
eglbox/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib/freetype-2.13.2/android/: CMakeLists.txt
lib/freetype-2.13.2/include/freetype/: fttypes.h
lib/freetype-2.13.2/include/freetype/internal/: ftdebug.h
lib/freetype-2.13.2/src/base/: fterrors.c
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: CMakeLists.txt
sample/src/main/cpp/src/jni/: android_logger.cpp  android_logger.h  egl_box_sample.cpp  env_utils.cpp  env_utils.h  jni_env_ptr.cpp  jni_env_ptr.h  method_inject.cpp  method_inject.h
sample/src/main/res/drawable/: blue_alpha_round_5dp.xml  selector_blue_round_5dp.xml  selector_gray_round_5dp.xml
sample/src/main/res/layout/: activity_ambient_light.xml  activity_ball.xml  activity_blend_main.xml  activity_drawing_mode.xml  activity_drawing_mode_main.xml  activity_font.xml  activity_geometry_cone.xml  activity_geometry_cylinder.xml  activity_geometry_geometry_ball.xml  activity_geometry_main.xml  activity_geometry_spring.xml  activity_geometry_torus.xml  activity_gl_preivew_view.xml  activity_glsl_main.xml  activity_light_ambient.xml  activity_light_ball.xml  (+34 more)
(+447 files in other folders)
